refactored, mock data stub

--- a/.eslintrc
+++ b/.eslintrc
@@ -6,5 +6,6 @@
     "sourceType": "module"
   },
   "rules": {
+    "@typescript-eslint/no-unused-vars": ["error", { "args": "all", "argsIgnorePattern": "^_" }]
   }
 }
