--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
    "repository": "git@github.com:lululeon/tiny-typeorm-starter.git",
    "license": "ISC",
    "devDependencies": {
+      "@types/cors": "^2.8.12",
+      "@types/express": "^4.17.13",
+      "@types/faker": "^5.5.7",
       "@types/node": "^8.0.29",
       "@typescript-eslint/eslint-plugin": "^4.29.1",
       "@typescript-eslint/parser": "^4.29.1",
@@ -19,9 +22,12 @@
       "typescript": "3.3.3333"
    },
    "dependencies": {
+      "cors": "^2.8.5",
       "cross-env": "^7.0.3",
       "dotenv": "^10.0.0",
       "envalid": "^7.1.1",
+      "express": "^4.17.1",
+      "faker": "^5.5.3",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.10",
       "typeorm": "0.2.36"
