--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
       "@types/express": "^4.17.13",
       "@types/faker": "^5.5.7",
       "@types/node": "^8.0.29",
+      "@types/supertest": "^2.0.11",
       "@typescript-eslint/eslint-plugin": "^4.29.1",
       "@typescript-eslint/parser": "^4.29.1",
       "eslint": "^7.32.0",
       "eslint-config-prettier": "^8.3.0",
       "eslint-plugin-prettier": "^3.4.0",
+      "jest": "^27.0.6",
       "nodemon": "^2.0.12",
       "prettier": "2.3.2",
+      "supertest": "^6.1.6",
       "ts-node": "3.3.0",
       "tsconfig-paths": "^3.10.1",
       "typescript": "3.3.3333"
@@ -38,6 +41,7 @@
       "up": "docker-compose up -d",
       "rebuild": "docker-compose up --build -d",
       "down": "docker-compose down",
-      "dev": "cross-env NODE_ENV=development nodemon"
+      "dev": "cross-env NODE_ENV=development nodemon",
+      "test": "jest"
    }
 }
