--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
       "@types/cors": "^2.8.12",
       "@types/express": "^4.17.13",
       "@types/faker": "^5.5.7",
+      "@types/jest": "^27.0.1",
       "@types/node": "^8.0.29",
       "@types/supertest": "^2.0.11",
       "@typescript-eslint/eslint-plugin": "^4.29.1",
@@ -20,9 +21,10 @@
       "nodemon": "^2.0.12",
       "prettier": "2.3.2",
       "supertest": "^6.1.6",
+      "ts-jest": "^27.0.5",
       "ts-node": "3.3.0",
       "tsconfig-paths": "^3.10.1",
-      "typescript": "3.3.3333"
+      "typescript": "^4.3.5"
    },
    "dependencies": {
       "cors": "^2.8.5",
