--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
       "typeorm": "0.2.36"
    },
    "scripts": {
-      "start": "ts-node src/index.ts",
+      "start": "ts-node -r tsconfig-paths/register src/index.ts",
       "lint": "eslint --ext .ts src/",
       "up": "docker-compose up -d",
       "rebuild": "docker-compose up --build -d",
