--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
       "rebuild": "docker-compose up --build -d",
       "down": "docker-compose down",
       "dev": "cross-env NODE_ENV=development nodemon",
-      "test": "jest"
+      "test": "jest",
+      "ci:installchk": "eval $([ -f ./node_modules ]) && echo 'install completed'"
    }
 }
