--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -1,21 +1,40 @@
 name: checks
 on: [push, pull_request]
 jobs:
-  build:
+  build-and-test:
     runs-on: "ubuntu-latest"
+    services:
+      postgres:
+        image: postgres:12
+        env:
+          # throwaway creds for pipeline only
+          POSTGRES_DB: cipg_db
+          POSTGRES_USER: cipg_user
+          POSTGRES_PASSWORD: cipg_pass
+        ports:
+          - 5432:5432
+    env:
+      # throwaway creds for pipeline only
+      NODE_ENV: test
+      DB_HOST: localhost
+      DB_PORT: 5432
+      DB_USER: cipg_user
+      DB_PASS: cipg_pass
+      DB_NAME: cipg_db
+      PORT: 3000
+      SECRET_KEY: zippeddydoodaa
+      CORS_ORIGIN: true
+      CORS_CREDENTIALS: true
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
           node-version: '14'
+      - name: Install
       - run: npm ci
+      - name: Lint
       - run: npm run lint
-  test:
-    runs-on: "ubuntu-latest"
-    # will this be sufficient
-    needs: build
-    steps:
-      # temp: do nothing for now
-      - run: chmod +x ./scripts/ci-install-check.sh
-      - run: npm run ci:installchk
-
+      - name: Tests
+      - run: chmod +x ./scripts/ci-wait-for-pg.sh
+      - run: ./scripts/ci-wait-for-pg.sh
+      - run: npm run test
