--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -1,7 +1,19 @@
-name: checks
+name: Install, build and test
 on: [push, pull_request]
 jobs:
-  build-and-test:
+  install:
+    runs-on: "ubuntu-latest"
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+      - name: Install
+        run: npm ci
+      - name: Lint
+        run: npm run lint
+  build-test:
+    needs: install
     runs-on: "ubuntu-latest"
     services:
       postgres:
@@ -30,10 +42,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '14'
-      - name: Install
-        run: npm ci
-      - name: Lint
-        run: npm run lint
+      - run: npm ci
       - name: Wait for postgres
         run: chmod +x ./scripts/ci-wait-for-pg.sh && ./scripts/ci-wait-for-pg.sh
       - name: Run tests
