--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -1,19 +1,7 @@
 name: Install, build and test
 on: [push, pull_request]
 jobs:
-  install:
-    runs-on: "ubuntu-latest"
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: '14'
-      - name: Install
-        run: npm ci
-      - name: Lint
-        run: npm run lint
-  build-test:
-    needs: install
+  ci-checks:
     runs-on: "ubuntu-latest"
     services:
       postgres:
@@ -42,7 +30,10 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '14'
-      - run: npm ci
+      - name: Install
+        run: npm ci
+      - name: Lint
+        run: npm run lint
       - name: Wait for postgres
         run: chmod +x ./scripts/ci-wait-for-pg.sh && ./scripts/ci-wait-for-pg.sh
       - name: Run tests
